--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss": "^4.0.11",
     "framer-motion": "^11.2.14",
     "next": "^14.2.24",
+    "next-video": "^2.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
