--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.11",
     "framer-motion": "^11.2.14",
+    "motion": "^12.4.10",
     "next": "^14.2.24",
     "next-video": "^2.1.0",
     "react": "^18",
